logs/turtlesim/build.make.096.log.stderr
In file included from /opt/ros/melodic/include/ros/ros.h:40:0,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:35,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:30:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘void turtlesim::Turtle::paint(QPainter&)’:
/opt/ros/melodic/include/ros/console.h:348:176: warning: format ‘%f’ expects argument of type ‘double’, but argument 8 has type ‘int’ [-Wformat=]
     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
                                                                                                                                                                                ^
/opt/ros/melodic/include/ros/console.h:351:5: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
     ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER(NULL, __VA_ARGS__)
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/melodic/include/ros/console.h:387:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/melodic/include/ros/console.h:572:35: note: in expansion of macro ‘ROS_LOG_COND’
 #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
                                   ^~~~~~~~~~~~
/opt/ros/melodic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
 #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
                       ^~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:247:3: note: in expansion of macro ‘ROS_INFO’
   ROS_INFO("DRAWLINE  at x=[%f], y=[%f]", int(wayx), int(wayy));
   ^
/opt/ros/melodic/include/ros/console.h:348:176: warning: format ‘%f’ expects argument of type ‘double’, but argument 9 has type ‘int’ [-Wformat=]
     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
                                                                                                                                                                                ^
/opt/ros/melodic/include/ros/console.h:351:5: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
     ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER(NULL, __VA_ARGS__)
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/melodic/include/ros/console.h:387:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/melodic/include/ros/console.h:572:35: note: in expansion of macro ‘ROS_LOG_COND’
 #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
                                   ^~~~~~~~~~~~
/opt/ros/melodic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
 #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
                       ^~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:247:3: note: in expansion of macro ‘ROS_INFO’
   ROS_INFO("DRAWLINE  at x=[%f], y=[%f]", int(wayx), int(wayy));
   ^
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:251:63: error: invalid conversion from ‘const char*’ to ‘int’ [-fpermissive]
   painter.drawText(rectangle1 ,"Current Waypoint %f",int(wayx));
                                                               ^
In file included from /usr/include/x86_64-linux-gnu/qt5/QtGui/QPainter:1:0,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:48,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:30:
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:420:10: note:   initializing argument 2 of ‘void QPainter::drawText(const QRect&, int, const QString&, QRect*)’
     void drawText(const QRect &r, int flags, const QString &text, QRect *br = Q_NULLPTR);
          ^~~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:251:54: error: invalid user-defined conversion from ‘int’ to ‘const QString&’ [-fpermissive]
   painter.drawText(rectangle1 ,"Current Waypoint %f",int(wayx));
                                                      ^~~~~~~~~
In file included from /usr/include/x86_64-linux-gnu/qt5/QtCore/qregexp.h:47:0,
                 from /usr/include/x86_64-linux-gnu/qt5/QtCore/qstringlist.h:47,
                 from /usr/include/x86_64-linux-gnu/qt5/QtCore/qlist.h:1094,
                 from /usr/include/x86_64-linux-gnu/qt5/QtCore/qstringlist.h:41,
                 from /usr/include/x86_64-linux-gnu/qt5/QtGui/qcolor.h:46,
                 from /usr/include/x86_64-linux-gnu/qt5/QtGui/qimage.h:44,
                 from /usr/include/x86_64-linux-gnu/qt5/QtGui/QImage:1,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:47,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:30:
/usr/include/x86_64-linux-gnu/qt5/QtCore/qstring.h:658:31: note: candidate is: QString::QString(const char*) <near match>
     inline QT_ASCII_CAST_WARN QString(const char *ch)
                               ^~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtCore/qstring.h:658:31: note:   conversion of argument 1 would be ill-formed:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:251:54: error: invalid conversion from ‘int’ to ‘const char*’ [-fpermissive]
   painter.drawText(rectangle1 ,"Current Waypoint %f",int(wayx));
                                                      ^~~~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:251:54: error: invalid conversion from ‘int’ to ‘const char*’ [-fpermissive]
In file included from /usr/include/x86_64-linux-gnu/qt5/QtCore/qregexp.h:47:0,
                 from /usr/include/x86_64-linux-gnu/qt5/QtCore/qstringlist.h:47,
                 from /usr/include/x86_64-linux-gnu/qt5/QtCore/qlist.h:1094,
                 from /usr/include/x86_64-linux-gnu/qt5/QtCore/qstringlist.h:41,
                 from /usr/include/x86_64-linux-gnu/qt5/QtGui/qcolor.h:46,
                 from /usr/include/x86_64-linux-gnu/qt5/QtGui/qimage.h:44,
                 from /usr/include/x86_64-linux-gnu/qt5/QtGui/QImage:1,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:47,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:30:
/usr/include/x86_64-linux-gnu/qt5/QtCore/qstring.h:658:31: note:   initializing argument 1 of ‘QString::QString(const char*)’
     inline QT_ASCII_CAST_WARN QString(const char *ch)
                               ^~~~~~~
In file included from /usr/include/x86_64-linux-gnu/qt5/QtGui/QPainter:1:0,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:48,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:30:
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:420:10: note:   initializing argument 3 of ‘void QPainter::drawText(const QRect&, int, const QString&, QRect*)’
     void drawText(const QRect &r, int flags, const QString &text, QRect *br = Q_NULLPTR);
          ^~~~~~~~
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
